Fixes #24 - Show search bar in doc-sidebar menu on small devices.

--- a/components/doc-sidebar/style.css
+++ b/components/doc-sidebar/style.css
@@ -121,6 +121,12 @@ body.docs .doc-sidebar {
     display:block;
 }
 
+.doc-sidebar > .search {
+    display: none;
+    margin: 0px;
+    margin-top: 1.5em;
+}
+
 @media (max-width:45em) {
     .doc-sidebar,
     .doc-sidebar.no-header,
@@ -152,5 +158,8 @@ body.docs .doc-sidebar {
     }
     .doc-sidebar ul a {
         padding:0.25em;
+    }
+    .doc-sidebar > .search {
+        display: flex;
     }
 }
